# regtech-mock-data-generator

./: .gitignore  README.md  pyproject.toml
docs/: hmda.yaml
examples/: backend_usage_examples.ipynb
sbl_demo/: main.py  sbl.yaml
sbl_demo/custom_backends/: MultipleResponse.py  UniqueID.py
sbl_demo/mock_data/: MockDataset.py
sbl_demo/mock_data/backends/: AbstractBackendInterface.py  BoundedNumerical.py  Correlation.py  FileRandom.py  LoremIpsumText.py  __init__.py
src/: README.md  hmda.yaml  hmda_conventional.ipynb  main_hmda.py  main_sbl.py  sbl.yaml  sbl_errors.ipynb  sbl_fake.yaml  utils.py
src/config/: README.md  hmda.yaml  hmda_simplified_conventional.yaml  hmda_ts.yaml
src/mock_data/: MockDataset.py  utils.py
src/mock_data/backends/: AbstractBackendInterface.py  BoundedNumerical.py  Correlation.py  FileRandom.py  LoremIpsumText.py  MultipleResponse.py  UniqueID.py  WeightedDiscrete.py  __init__.py
